# otus_hw13_computer_vision

./: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp
.github/workflows/: release.yml
include/mnist/: classifier.h
src/: logreg_classifier.cpp
